--- a/MeuSiteEmMVC/Views/Contato/ApagarConfirmacao.cshtml
+++ b/MeuSiteEmMVC/Views/Contato/ApagarConfirmacao.cshtml
@@ -1,9 +1,11 @@
-﻿@{
-    ViewData["Title"] = "Apagar contato";
+﻿@model ContatoModel
+
+@{
+    ViewData["Title"] = "Confirmarção apagar contato";
 }
 
 <div class="text-center">
-    <h1>Deseja realmente apagar o contato()? </h1>
+    <h1>Deseja realmente apagar o contato (@Model.Nome)? </h1>
 </div>
-    <a class="btn btn-primary w-100 mb-1" role="button">Apagar</a>
-    <a class="btn btn-secondary w-100" role="button" asp-controller="Contato" asp-action="Index">Voltar</a>
+<a class="btn btn-primary w-100 mb-1" role="button" asp-controller="Contato" asp-action="Apagar" asp-route-id="@Model.Id" >Apagar</a>
+<a class="btn btn-secondary w-100" role="button" asp-controller="Contato" asp-action="Index">Voltar</a>
