--- a/MeuSiteEmMVC/Views/Contato/Index.cshtml
+++ b/MeuSiteEmMVC/Views/Contato/Index.cshtml
@@ -7,8 +7,23 @@
     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
         <a class="btn btn-primary" role="button" asp-controller="Contato" asp-action="Criar">Adicionar novo contato</a>
     </div>
-    <br/>
+    <br />
     <h1 class="display-4">Listagem de contatos</h1>
+    @if (TempData["MensagemSucesso"] != null)
+    {
+    <div class="alert alert-success" role="alert">
+        <button type="button" class="btn-close" aria-label="Close"></button>
+        @TempData["MensagemSucesso"]
+    </div>
+    }
+    @if (TempData["MensagemErro"] != null)
+    {
+    <div class="alert alert-danger" role="alert">
+        <button type="button" class="btn-close" aria-label="Close"></button>
+        @TempData["MensagemErro"]
+    </div>
+    }
+
     <table class="table">
         <thead>
             <tr>
@@ -20,9 +35,9 @@
             </tr>
         </thead>
         <tbody>
-            @if(Model != null && Model.Any()) 
+            @if (Model != null && Model.Any())
             {
-                foreach(ContatoModel contato in Model) 
+                foreach (ContatoModel contato in Model)
                 {
                     <tr>
                         <th scope="row">@contato.Id</th>
