--- a/MeuSiteEmMVC/wwwroot/css/site.css
+++ b/MeuSiteEmMVC/wwwroot/css/site.css
@@ -20,3 +20,15 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.field-validation-error {
+    color: #be2929;
+}
+.btn-close {
+    position: absolute; /* Permite posicionar o botão em relação ao contêiner da mensagem */
+    top: 10px;
+    right: 10px;
+    border: none; /* Remove a borda */
+    font-size: 20px; /* Tamanho da fonte */
+    cursor: pointer; /* Cursor de mão para indicar que é clicável */
+}
