Paginação e Filtro de busca Concluído

--- a/MeuSiteEmMVC/Views/Contato/Index.cshtml
+++ b/MeuSiteEmMVC/Views/Contato/Index.cshtml
@@ -24,7 +24,7 @@
     </div>
     }
 
-    <table class="table">
+    <table class="table" id="table-contatos">
         <thead>
             <tr>
                 <th scope="col">#</th>
