crud usuario finalizado

--- a/MeuSiteEmMVC/Views/Usuario/Index.cshtml
+++ b/MeuSiteEmMVC/Views/Usuario/Index.cshtml
@@ -8,7 +8,7 @@
         <a class="btn btn-primary" role="button" asp-controller="Usuario" asp-action="Criar">Adicionar novo usuario</a>
     </div>
     <br />
-    <h1 class="display-4">Listagem de Usuarios</h1>
+    <h1 class="display-4">Listagem de usuarios</h1>
     @if (TempData["MensagemSucesso"] != null)
     {
     <div class="alert alert-success" role="alert">
