--- a/MeuSiteEmMVC/Views/Usuario/Criar.cshtml
+++ b/MeuSiteEmMVC/Views/Usuario/Criar.cshtml
@@ -24,17 +24,20 @@
         @Html.ValidationMessageFor(x => x.Login)
     </div>
     <div class="mb-2">
-        <select asp-for="Perfil" class="form-select form-select-sm" aria-label="Selecione o perfil">
-            <option selected>Open this select menu</option>
-            <option value="1">Administrador</option>
-            <option value="2">Padrão</option>
+        <select asp-for="Perfil" class="form-select form-select-sm" aria-label="Small select example">
+            <option selected>Selecione o Perfil</option>
+            <option value="@MeuSiteEmMVC.Enums.PerfilEnum.Admin">Administrador</option>
+            <option value="@MeuSiteEmMVC.Enums.PerfilEnum.Padrao">Padrão</option>
         </select>
     </div>
-    <label for="inputPassword5" class="form-label">Password</label>
-    <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
-    <div id="passwordHelpBlock" class="form-text">
-        Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+    <label for="inputPassword5" class="form-label">Senha</label>
+    <div class="input-group mb-3">
+        <input type="password" asp-for="Senha" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock" placeholder="Digite a senha do Usuario">
+        @Html.ValidationMessageFor(x => x.Senha)
+        <button class="btn btn-outline-secondary" type="button" id="togglePassword">
+            Mostrar
+        </button>
     </div>
     <button type="submit" class="btn btn-primary w-100 mb-1">Cadastrar</button>
-    <a class="btn btn-secondary w-100" asp-controller="Contato" asp-action="Index" role="button">Voltar</a>
+    <a class="btn btn-secondary w-100" asp-controller="Usuario" asp-action="Index" role="button">Voltar</a>
 </form>
