criando tela de login

--- a/MeuSiteEmMVC/Views/Usuario/Criar.cshtml
+++ b/MeuSiteEmMVC/Views/Usuario/Criar.cshtml
@@ -24,20 +24,23 @@
         @Html.ValidationMessageFor(x => x.Login)
     </div>
     <div class="mb-2">
+        <label for="Perfil" class="form-label">Perfil</label>
         <select asp-for="Perfil" class="form-select form-select-sm" aria-label="Small select example">
-            <option selected>Selecione o Perfil</option>
+            <option value="" selected>Selecione</option>
             <option value="@MeuSiteEmMVC.Enums.PerfilEnum.Admin">Administrador</option>
             <option value="@MeuSiteEmMVC.Enums.PerfilEnum.Padrao">Padrão</option>
         </select>
         @Html.ValidationMessageFor(x => x.Perfil)
     </div>
     <label for="inputPassword5" class="form-label">Senha</label>
-    <div class="input-group mb-3">
-        <input type="password" asp-for="Senha" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock" placeholder="Digite a senha do Usuario">
+    <div class="mb-2">
+        <div class="input-group">
+            <input type="password" asp-for="Senha" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock" placeholder="Digite a senha do Usuario">
+            <button class="btn btn-outline-secondary shadow-none" type="button" id="togglePassword">
+                Mostrar
+            </button>
+        </div>
         @Html.ValidationMessageFor(x => x.Senha)
-        <button class="btn btn-outline-secondary" type="button" id="togglePassword">
-            Mostrar
-        </button>
     </div>
     <button type="submit" class="btn btn-primary w-100 mb-1">Cadastrar</button>
     <a class="btn btn-secondary w-100" asp-controller="Usuario" asp-action="Index" role="button">Voltar</a>
