--- a/MeuSiteEmMVC/Views/Usuario/Editar.cshtml
+++ b/MeuSiteEmMVC/Views/Usuario/Editar.cshtml
@@ -26,8 +26,9 @@
         @Html.ValidationMessageFor(x => x.Email)
     </div>
     <div class="mb-2">
+        <label for="Perfil" class="form-label">Perfil</label>
         <select asp-for="Perfil" class="form-select form-select-sm" aria-label="Small select example">
-            <option value="" selected>Selecione o Perfil</option>
+            <option value="" selected>Selecione</option>
             <option value="@MeuSiteEmMVC.Enums.PerfilEnum.Admin">Administrador</option>
             <option value="@MeuSiteEmMVC.Enums.PerfilEnum.Padrao">Padrão</option>
         </select>
