--- a/MeuSiteEmMVC/Views/Usuario/Index.cshtml
+++ b/MeuSiteEmMVC/Views/Usuario/Index.cshtml
@@ -29,8 +29,9 @@
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Nome</th>
-                <th scope="col">Email</th>
                 <th scope="col">Login</th>
+                <th scope="col">Email</th>
+                <th scope="col">Perfil</th>
                 <th scope="col">Data de Cadastro</th>
                 <th scope="col"></th>
             </tr>
@@ -43,8 +44,9 @@
                     <tr>
                         <th scope="row">@usuario.Id</th>
                         <td>@usuario.Nome</td>
-                        <td>@usuario.Email</td>
                         <td>@usuario.Login</td>
+                        <td>@usuario.Email</td>
+                        <td>@(usuario.Perfil == MeuSiteEmMVC.Enums.PerfilEnum.Admin ? "Administrador" : "Padrão")</td>
                         <td>@usuario.DataCadastro</td>
                         <td>
                             <div class="btn-group" role="group" aria-label="Basic outlined example">
