tela de login finalizada

--- a/MeuSiteEmMVC/Views/Login/Index.cshtml
+++ b/MeuSiteEmMVC/Views/Login/Index.cshtml
@@ -23,7 +23,7 @@
     <label for="inputPassword5" class="form-label">Senha</label>
     <div class="mb-2">
         <div class="input-group">
-            <input type="password" asp-for="Senha" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock" placeholder="Digite a senha do Usuario">
+            <input type="password" asp-for="Senha" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock" placeholder="Digite a senha">
             <button class="btn btn-outline-secondary shadow-none" type="button" id="togglePassword">
                 Mostrar
             </button>
