--- a/MeuSiteEmMVC/Views/Contato/Index.cshtml
+++ b/MeuSiteEmMVC/Views/Contato/Index.cshtml
@@ -24,27 +24,27 @@
     </div>
     }
 
-    <table class="table" id="table-contatos">
+    <table id="table-contatos" class="table" width="100%">
         <thead>
             <tr>
-                <th scope="col">#</th>
-                <th scope="col">Nome</th>
-                <th scope="col">Email</th>
-                <th scope="col">Telefone</th>
-                <th scope="col"></th>
+                <th scope="col" style="text-align:center;">#</th>
+                <th scope="col" style="text-align:center;">Nome</th>
+                <th scope="col" style="text-align:center;">Email</th>
+                <th scope="col" style="text-align:center;">Telefone</th>
+                <th scope="col" style="text-align:center;"></th>
             </tr>
         </thead>
         <tbody>
             @if (Model != null && Model.Any())
             {
-                foreach (ContatoModel contato in Model)
+                foreach (var contato in Model)
                 {
                     <tr>
-                        <th scope="row">@contato.Id</th>
-                        <td>@contato.Nome</td>
-                        <td>@contato.Email</td>
-                        <td>@contato.Telefone</td>
-                        <td>
+                        <th scope="row" style="text-align:center;">@contato.Id</th>
+                        <td style="text-align:center;">@contato.Nome</td>
+                        <td style="text-align:center;">@contato.Email</td>
+                        <td style="text-align:center;">@contato.Telefone</td>
+                        <td style="text-align:center">
                             <div class="btn-group" role="group" aria-label="Basic outlined example">
                                 <a role="button" class="btn btn-primary" asp-route-id="@contato.Id" asp-controller="Contato" asp-action="Editar">Editar</a>
                                 <a role="button" class="btn btn-danger" asp-route-id="@contato.Id" asp-controller="Contato" asp-action="ApagarConfirmacao">Apagar</a>
