--- a/MeuSiteEmMVC/Views/Usuario/Index.cshtml
+++ b/MeuSiteEmMVC/Views/Usuario/Index.cshtml
@@ -11,45 +11,49 @@
     <h1 class="display-4">Listagem de usuarios</h1>
     @if (TempData["MensagemSucesso"] != null)
     {
-    <div class="alert alert-success" role="alert">
-        <button type="button" class="btn-close" aria-label="Close"></button>
-        @TempData["MensagemSucesso"]
-    </div>
+        <div class="alert alert-success" role="alert">
+            <button type="button" class="btn-close" aria-label="Close"></button>
+            @TempData["MensagemSucesso"]
+        </div>
     }
     @if (TempData["MensagemErro"] != null)
     {
-    <div class="alert alert-danger" role="alert">
-        <button type="button" class="btn-close" aria-label="Close"></button>
-        @TempData["MensagemErro"]
-    </div>
+        <div class="alert alert-danger" role="alert">
+            <button type="button" class="btn-close" aria-label="Close"></button>
+            @TempData["MensagemErro"]
+        </div>
     }
 
-    <table class="table" id="table-usuarios">
+    <table class="display" id="table-usuarios" style="width:100%">
         <thead>
             <tr>
-                <th scope="col">#</th>
-                <th scope="col">Nome</th>
-                <th scope="col">Login</th>
-                <th scope="col">Email</th>
-                <th scope="col">Perfil</th>
-                <th scope="col">Data de Cadastro</th>
-                <th scope="col"></th>
+                <th scope="col" style="text-align:center;">#</th>
+                <th scope="col" style="text-align:center;">Nome</th>
+                <th scope="col" style="text-align:center;">Login</th>
+                <th scope="col" style="text-align:center;">Email</th>
+                <th scope="col" style="text-align:center;">Perfil</th>
+                <th scope="col" style="text-align:center;">Total de Contatos</th>
+                <th scope="col" style="text-align:center;">Data de Cadastro</th>
+                <th scope="col" style="text-align:center;"></th>
             </tr>
         </thead>
         <tbody>
             @if (Model != null && Model.Any())
             {
-                foreach (UsuarioModel usuario in Model)
+                foreach (var usuario in Model)
                 {
                     <tr>
-                        <th scope="row">@usuario.Id</th>
-                        <td>@usuario.Nome</td>
-                        <td>@usuario.Login</td>
-                        <td>@usuario.Email</td>
-                        <td>@(usuario.Perfil == MeuSiteEmMVC.Enums.PerfilEnum.Admin ? "Administrador" : "Padrão")</td>
-                        <td>@usuario.DataCadastro</td>
-                        <td>
-                            <div class="btn-group" role="group" aria-label="Basic outlined example">
+                        <th style="text-align:center;" scope="row">@usuario.Id</th>
+                        <td style="text-align:center;">@usuario.Nome</td>
+                        <td style="text-align:center;">@usuario.Login</td>
+                        <td style="text-align:center;">@usuario.Email</td>
+                        <td style="text-align:center;">@(usuario.Perfil == MeuSiteEmMVC.Enums.PerfilEnum.Admin ? "Administrador" : "Padrão")</td>
+                        <td style="text-align:center;">
+                            <a href="#" class="btn btn-success btn-total-contatos" usuario-id="@usuario.Id">@(usuario.Contatos != null && usuario.Contatos.Any() ? usuario.Contatos.Count() : 0)</a>
+                        </td>
+                        <td style="text-align:center;">@usuario.DataCadastro</td>
+                        <td style="text-align:center;">
+                            <div class="btn-group" role="group">
                                 <a role="button" class="btn btn-primary" asp-route-id="@usuario.Id" asp-controller="Usuario" asp-action="Editar">Editar</a>
                                 <a role="button" class="btn btn-danger" asp-route-id="@usuario.Id" asp-controller="Usuario" asp-action="ApagarConfirmacao">Apagar</a>
                             </div>
@@ -59,4 +63,19 @@
             }
         </tbody>
     </table>
+ 
+    <div class="modal" id="modalContatosUsuario" tabindex="-1">
+        <div class="modal-dialog modal-xl">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div id="listaContatosUsuario"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
